# HTTP-Requests

./: README.md
HTML-header/: CMakeLists.txt  main.cpp
arguments-type/: main.cpp
user-request/: CMakeLists.txt  main.cpp
